--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Comment App</title>
+	<link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -13,20 +14,21 @@
 
 				<form id="todoForm">
 					<div class="form-group">
-						<input id="username" class="form-control" placeholder="username">
+						<input id="user" class="form-control" placeholder="Name">
 					</div>
 					<div class="form-group">
-						<textarea id="comment" class="form-control" placeholder="comment"></textarea>
+						<textarea id="text" class="form-control" placeholder="Comment"></textarea>
 					</div>
 					<div class="form-group">
-						<button type="button" onclick="todoList()" class="btn btn-primary btn-lg">click me</button>
+						<button type="button" onclick="comment()" class="button">Add Comment</button>
 					</div>
 				</form>
-				<ul id="commentList" class="list-group">
+				<ul id="comments" class="list-group">
 				</ul>
 			</div>
 		</div>
 	</div>
+	<script src="http://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
