--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 						<button type="button" onclick="comment()" class="button">Add Comment</button>
 					</div>
 				</form>
+				<p id="demo"></p>
 				<ul id="comments" class="list-group">
 				</ul>
 			</div>
